Fix smartphone categories font sizes and alignment

--- a/Exercise_5/css/styles.css
+++ b/Exercise_5/css/styles.css
@@ -990,13 +990,14 @@ button[type="reset"]:hover {
     }
 
     nav img {
-        width: 40px;
-        height: 40px;
+        width: 80px;
+        height: 80px;
         object-fit: cover;
         border-radius: 50%;
         transition: transform 0.3s;
         margin-bottom: 5px;
     }
+
     nav img:hover {
         transform: scale(1.1);
     }
@@ -1024,6 +1025,7 @@ button[type="reset"]:hover {
         color: black;
         text-align: left;
         margin-left: 0.2em;
+        font-size: 3rem;
     }
 
     .logo {
@@ -1037,8 +1039,8 @@ button[type="reset"]:hover {
     .back-button {
         margin-top: 10px;
         display: inline-block;
-        padding: 10px 20px;
-        font-size: 16px;
+        padding: 20px 50px;
+        font-size: 36px;
         font-weight: bold;
         color: #ffffff;
         background: linear-gradient(135deg, #72f0c9, #007aff);
@@ -1061,8 +1063,8 @@ button[type="reset"]:hover {
         color: white;
         border: none;
         border-radius: 50px;
-        padding: 7px 20px;
-        font-size: 1rem;
+        padding: 30px 60px;
+        font-size: 3rem;
         font-weight: bold;
         cursor: pointer;
         box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
@@ -1192,7 +1194,7 @@ button[type="reset"]:hover {
         font-weight: bold;
     }
 
-    #category-grid{
+    #category-grid {
         list-style-type: none;
         display: grid;
         grid:"1"
@@ -1207,10 +1209,10 @@ button[type="reset"]:hover {
     #category-grid > li{
         align-items: center;
         justify-items: center;
-        padding: 20px;
+        padding: 30px;
         border-radius: 8px;
         background-color: #fcce73;
-        margin: 10px;
+        margin: 50px;
         gap: 15px;
         width: 90%;
         height: 85%
@@ -1218,10 +1220,17 @@ button[type="reset"]:hover {
 
     #category-grid section{
         position: relative;
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+        align-items: center;
+        justify-content: center;
     }
 
     .subcategories {
+        margin-top: 50px;
         font-size: 17px;
+        scale: 200%;
     }
 
     footer ul {
